--- a/.eslintrc
+++ b/.eslintrc
@@ -14,6 +14,7 @@
     "arrow-body-style":                    0,
     "prefer-template":                     0,
     "no-console":                          0,
+    "no-multi-spaces":                     0,
     "comma-dangle":                        [2, "never"],
     "space-before-function-paren":         [2, "always"],
     "jsx-quotes":                          [2, "prefer-single"],
