--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "eslint": "./node_modules/.bin/eslint .",
     "start": "NODE_ENV=development ./node_modules/.bin/webpack-dev-server --inline",
-    "build": "npm run eslint && NODE_ENV=production ./node_modules/.bin/webpack"
+    "build": "npm run eslint && NODE_ENV=production ./node_modules/.bin/webpack",
+    "pages": "git subtree push --prefix build origin gh-pages"
   },
   "license": "MIT",
   "dependencies": {
