--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "babel-preset-es2015": "^6.5.0",
     "babel-preset-react": "^6.5.0",
     "babel-preset-stage-2": "^6.5.0",
-    "bem-cn": "^1.2.1",
     "clean-webpack-plugin": "^0.1.8",
     "css-loader": "^0.23.1",
     "eslint": "^1.10.3",
@@ -34,6 +33,7 @@
     "node-sass": "^3.4.2",
     "postcss-loader": "^0.8.1",
     "react": "^0.14.7",
+    "react-css-modules": "^3.7.5",
     "react-dom": "^0.14.7",
     "react-redux": "^4.4.0",
     "redux": "^3.3.1",
