--- a/.eslintrc
+++ b/.eslintrc
@@ -11,6 +11,7 @@
   },
   "rules": {
     "max-len":                             [2, 120],
+    "no-else-return":                      0,
     "new-cap":                             0,
     "arrow-body-style":                    0,
     "prefer-template":                     0,
