--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-css-modules": "^3.7.5",
     "react-dom": "^0.14.7",
     "react-redux": "^4.4.0",
+    "react-router": "^2.0.0",
     "redux": "^3.3.1",
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
