--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
     "url": ""
   },
   "scripts": {
-    "eslint": "./node_modules/.bin/eslint .",
+    "stylelint": "./node_modules/.bin/stylelint ./src/**/*.scss --syntax scss",
+    "eslint": "./node_modules/.bin/eslint . --ext .js --ext .jsx",
     "start": "NODE_ENV=development ./node_modules/.bin/webpack-dev-server --inline",
-    "build": "npm run eslint && NODE_ENV=production ./node_modules/.bin/webpack",
+    "build": "npm run eslint && npm run stylelint && NODE_ENV=production ./node_modules/.bin/webpack",
     "pages": "git subtree push --prefix build origin gh-pages"
   },
   "license": "MIT",
@@ -40,6 +41,8 @@
     "redux": "^3.3.1",
     "sass-loader": "^3.1.2",
     "style-loader": "^0.13.0",
+    "stylelint": "^4.5.1",
+    "stylelint-config-standard": "^4.0.0",
     "webpack": "^1.12.13",
     "webpack-dev-server": "^1.14.1"
   }
